add Authentication and filter users by Token

--- a/MyNote/.env.example
+++ b/MyNote/.env.example
@@ -1,3 +1,4 @@
 DEBUG=off
 SECRET_KEY=your-secret-key
 DATABASE_URL=psql://urser:urpassword@127.0.0.1:8458/database
+DEFAULT_PERMISSION_CLASSES='rest_framework.permissions.IsAdminUser'
