--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
 asgiref==3.2.10
 astroid==2.4.2
+attrs==20.2.0
+autopep8==1.5.4
+coverage==5.3
 Django==3.1.2
 django-environ==0.4.5
+djangorestframework==3.12.1
+iniconfig==1.1.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
 pylint==2.6.0
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-cov==2.10.1
+pytest-django==4.1.0
 pytz==2020.1
 six==1.15.0
 sqlparse==0.4.1
